Fix heading order [SEO][Accessibility]

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 <div class="top-header">
-	<h3 class="name">Nina Carducci</h3>
+	<h1 class="name">Nina Carducci</h1>
 	<div class="nav">   
 		<ul>
 			<li><a href="#about">About</a></li>
@@ -63,14 +63,14 @@
 		<img src="./assets/images/nina.webp" width="1460" height="1456" alt="A portrait of Nina Carducci">
 	</div>
 	<div id="about-me">
-		<h3 class="about-me__title">About Me</h3>
-		<h6 class="about-me__introduction">Becoming a photographer was an easy choice for me. It felt like it was my destiny. Capturing a moment, an emotion, a situation, a place, or a glimmer of light and making them immortal, that’s what drives me.</h6>
+		<h2 class="about-me__title">About Me</h3>
+		<blockquote class="about-me__introduction">Becoming a photographer was an easy choice for me. It felt like it was my destiny. Capturing a moment, an emotion, a situation, a place, or a glimmer of light and making them immortal, that’s what drives me.</blockquote>
 		<p>We spend our lives searching for happiness, and once we find it, we want to celebrate it as a photograph to share with the people we love or to show to as many people as possible.
 			This is what I have to offer, capturing these beautiful moments from my perspective, my approach, and my technique. Immortalize these moments so they bring you love, happiness, affection, and light every time you look at your photos.</p>
 	</div>
 </div>
 <div id="gallery">
-	<h3 class="title">Portfolio</h3>
+	<h2 class="title">Portfolio</h2>
 	<div class="container py-3">
 		<div class="gallery" style="display: none">
 			<img data-gallery-tag="Concerts" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.thumbnail.webp" alt="People in a concert" loading="lazy"/>
@@ -85,16 +85,14 @@
 		</div>
 	</div>
 	<div class="quote">
-		<figure>
-			<blockquote>
-				<h1 class="quote__text">A portrait is not a likeness. The moment an emotion or fact is transformed into a photograph, it is no longer a fact but an opinion. There is no such thing as inaccuracy in a photograph. All photographs are accurate. None of them is truth.</h1>
-			</blockquote>
+		<figure> <!-- @FIXME -->
+			<blockquote class="quote__text">A portrait is not a likeness. The moment an emotion or fact is transformed into a photograph, it is no longer a fact but an opinion. There is no such thing as inaccuracy in a photograph. All photographs are accurate. None of them is truth.</blockquote>
 			<figcaption class="quote__author">- Richard Avedon</figcaption>
 		</figure>
 	</div>
 </div>
 <div id="services">
-	<h3 class="title">My services</h3>
+	<h2 class="title">My services</h2>
 	<div class="container">
 		<div class="service">
 			<div class="service__description">
@@ -102,8 +100,8 @@
 				<p>Capture your most precious moments and make them unforgettable. I can travel anywhere in Île-de-France to take your photos.</p>
 			</div>
 			<div class="service__price">
-				<h4>350€/half-day</h4>
-				<span>Equipment and travel included</span>
+				<strong>350€/half-day</strong>
+				<p>Equipment and travel included</p>
 			</div>
 
 		</div>
@@ -113,8 +111,8 @@
 				<p>Are you looking to retouch your photos for a professional look? Optimally rendered images for your publications.</p>
 			</div>
 			<div class="service__price">
-				<h4>50€/photo</h4>
-				<span>Two revisions per photo</span>
+				<strong>50€/photo</strong>
+				<p>Two revisions per photo</p>
 			</div>
 		</div>
 		<div class="service">
@@ -123,24 +121,22 @@
 				<p>Personalized photo albums of cherished moments to share with loved ones or clients.</p>
 			</div>
 			<div class="service__price">
-				<h4>400€ letter-sized album</h4>
-				<span>30 double-sided pages>
+				<strong>400€ letter-sized album</strong>
+				<p>30 double-sided pages</p>
 			</div>
 		</div>
 	</div>
 </div>
 <div class="quote">
-	<figure>
-		<blockquote>
-			<h1 class="quote__text">Subconsciously, I think that I’m always searching for a look, an expression, a feature, or a sense of nostalgia capable of defining—or more specifically—revealing life.</h1>
-		</blockquote>
+	<figure> <!-- @FIXME -->
+		<blockquote class="quote__text">Subconsciously, I think that I’m always searching for a look, an expression, a feature, or a sense of nostalgia capable of defining—or more specifically—revealing life.</blockquote>
 		<figcaption class="quote__author">- Richard Avedon</figcaption>
 	</figure>
 </div>
 <div id="contact">
 	<div class="container">
 		<div class="form-container">
-			<h3>Have a question? Need a quote?</h3>
+			<h2>Have a question? Need a quote?</h2>
 			<p> Don’t hesitate to contact me! I’ll get back to you within 24 hours.</p>
 			<form action="" method="post">
 				<label>Name</label>
