--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<script defer src="./assets/scripts.js"></script>
 </head>
 <body>
-<div class="top-header">
+<nav class="top-header">
 	<h1 class="name">Nina Carducci</h1>
 	<div class="nav">   
 		<ul>
@@ -28,8 +28,8 @@
 			<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/instagram.webp" alt="Instagram of Nina Carducci" width="40" height="40"></a></li>
 		</ul>
 	</div>
-</div>
-<div id="header">
+</nav>
+<header id="header">
 
 	<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
 		<div class="carousel-indicators">
@@ -57,83 +57,85 @@
 			<span class="visually-hidden">Next</span>
 		</button>
 	</div>
-</div>
-<div id="about">
-	<div class="picture left">
-		<img src="./assets/images/nina.webp" width="1460" height="1456" alt="A portrait of Nina Carducci">
-	</div>
-	<div id="about-me">
-		<h2 class="about-me__title">About Me</h3>
-		<blockquote class="about-me__introduction">Becoming a photographer was an easy choice for me. It felt like it was my destiny. Capturing a moment, an emotion, a situation, a place, or a glimmer of light and making them immortal, that’s what drives me.</blockquote>
-		<p>We spend our lives searching for happiness, and once we find it, we want to celebrate it as a photograph to share with the people we love or to show to as many people as possible.
-			This is what I have to offer, capturing these beautiful moments from my perspective, my approach, and my technique. Immortalize these moments so they bring you love, happiness, affection, and light every time you look at your photos.</p>
-	</div>
-</div>
-<div id="gallery">
-	<h2 class="title">Portfolio</h2>
-	<div class="container py-3">
-		<div class="gallery" style="display: none">
-			<img data-gallery-tag="Concerts" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.thumbnail.webp" alt="People in a concert" loading="lazy"/>
-			<img data-gallery-tag="Business" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.thumbnail.webp" alt="Man in sartorial style" loading="lazy"/>
-			<img data-gallery-tag="Business" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.thumbnail.webp" alt="People talking in an openspace" loading="lazy"/>
-			<img data-gallery-tag="Weddings" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.thumbnail.webp" alt="People grabbing hands" loading="lazy"/>
-			<img data-gallery-tag="Portraits" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.thumbnail.webp" alt="Man closing his eyes" loading="lazy"/>
-			<img data-gallery-tag="Weddings" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.thumbnail.webp" alt="Wedding celebration" loading="lazy"/>
-			<img data-gallery-tag="Portraits" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.thumbnail.webp" alt="Young women" loading="lazy"/>
-			<img data-gallery-tag="Concerts" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.thumbnail.webp" alt="Man singing with blue white red smoke" loading="lazy"/>
-			<img data-gallery-tag="Business" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.thumbnail.webp" alt="Woman smiling in front of a laptop" loading="lazy"/>
+</header>
+<main>
+	<section id="about">
+		<div class="picture left">
+			<img src="./assets/images/nina.webp" width="1460" height="1456" alt="A portrait of Nina Carducci">
 		</div>
-	</div>
-	<div class="quote">
+		<div id="about-me">
+			<h2 class="about-me__title">About Me</h3>
+			<blockquote class="about-me__introduction">Becoming a photographer was an easy choice for me. It felt like it was my destiny. Capturing a moment, an emotion, a situation, a place, or a glimmer of light and making them immortal, that’s what drives me.</blockquote>
+			<p>We spend our lives searching for happiness, and once we find it, we want to celebrate it as a photograph to share with the people we love or to show to as many people as possible.
+				This is what I have to offer, capturing these beautiful moments from my perspective, my approach, and my technique. Immortalize these moments so they bring you love, happiness, affection, and light every time you look at your photos.</p>
+		</div>
+	</section>
+	<section id="gallery">
+		<h2 class="title">Portfolio</h2>
+		<div class="container py-3">
+			<div class="gallery" style="display: none">
+				<img data-gallery-tag="Concerts" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.thumbnail.webp" alt="People in a concert" loading="lazy"/>
+				<img data-gallery-tag="Business" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.thumbnail.webp" alt="Man in sartorial style" loading="lazy"/>
+				<img data-gallery-tag="Business" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.thumbnail.webp" alt="People talking in an openspace" loading="lazy"/>
+				<img data-gallery-tag="Weddings" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.thumbnail.webp" alt="People grabbing hands" loading="lazy"/>
+				<img data-gallery-tag="Portraits" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.thumbnail.webp" alt="Man closing his eyes" loading="lazy"/>
+				<img data-gallery-tag="Weddings" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.thumbnail.webp" alt="Wedding celebration" loading="lazy"/>
+				<img data-gallery-tag="Portraits" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.thumbnail.webp" alt="Young women" loading="lazy"/>
+				<img data-gallery-tag="Concerts" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.thumbnail.webp" alt="Man singing with blue white red smoke" loading="lazy"/>
+				<img data-gallery-tag="Business" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.thumbnail.webp" alt="Woman smiling in front of a laptop" loading="lazy"/>
+			</div>
+		</div>
+		<div class="quote">
+			<figure> <!-- @FIXME -->
+				<blockquote class="quote__text">A portrait is not a likeness. The moment an emotion or fact is transformed into a photograph, it is no longer a fact but an opinion. There is no such thing as inaccuracy in a photograph. All photographs are accurate. None of them is truth.</blockquote>
+				<figcaption class="quote__author">- Richard Avedon</figcaption>
+			</figure>
+		</div>
+	</section>
+	<section id="services">
+		<h2 class="title">My services</h2>
+		<div class="container">
+			<div class="service">
+				<div class="service__description">
+					<h3>Photo Shoots</h3>
+					<p>Capture your most precious moments and make them unforgettable. I can travel anywhere in Île-de-France to take your photos.</p>
+				</div>
+				<div class="service__price">
+					<strong>350€/half-day</strong>
+					<p>Equipment and travel included</p>
+				</div>
+
+			</div>
+			<div class="service">
+				<div class="service__description">
+					<h3>Retouching</h3>
+					<p>Are you looking to retouch your photos for a professional look? Optimally rendered images for your publications.</p>
+				</div>
+				<div class="service__price">
+					<strong>50€/photo</strong>
+					<p>Two revisions per photo</p>
+				</div>
+			</div>
+			<div class="service">
+				<div class="service__description">
+					<h3>Photo Albums</h3>
+					<p>Personalized photo albums of cherished moments to share with loved ones or clients.</p>
+				</div>
+				<div class="service__price">
+					<strong>400€ letter-sized album</strong>
+					<p>30 double-sided pages</p>
+				</div>
+			</div>
+		</div>
+	</section>
+	<aside class="quote">
 		<figure> <!-- @FIXME -->
-			<blockquote class="quote__text">A portrait is not a likeness. The moment an emotion or fact is transformed into a photograph, it is no longer a fact but an opinion. There is no such thing as inaccuracy in a photograph. All photographs are accurate. None of them is truth.</blockquote>
+			<blockquote class="quote__text">Subconsciously, I think that I’m always searching for a look, an expression, a feature, or a sense of nostalgia capable of defining—or more specifically—revealing life.</blockquote>
 			<figcaption class="quote__author">- Richard Avedon</figcaption>
 		</figure>
-	</div>
-</div>
-<div id="services">
-	<h2 class="title">My services</h2>
-	<div class="container">
-		<div class="service">
-			<div class="service__description">
-				<h3>Photo Shoots</h3>
-				<p>Capture your most precious moments and make them unforgettable. I can travel anywhere in Île-de-France to take your photos.</p>
-			</div>
-			<div class="service__price">
-				<strong>350€/half-day</strong>
-				<p>Equipment and travel included</p>
-			</div>
-
-		</div>
-		<div class="service">
-			<div class="service__description">
-				<h3>Retouching</h3>
-				<p>Are you looking to retouch your photos for a professional look? Optimally rendered images for your publications.</p>
-			</div>
-			<div class="service__price">
-				<strong>50€/photo</strong>
-				<p>Two revisions per photo</p>
-			</div>
-		</div>
-		<div class="service">
-			<div class="service__description">
-				<h3>Photo Albums</h3>
-				<p>Personalized photo albums of cherished moments to share with loved ones or clients.</p>
-			</div>
-			<div class="service__price">
-				<strong>400€ letter-sized album</strong>
-				<p>30 double-sided pages</p>
-			</div>
-		</div>
-	</div>
-</div>
-<div class="quote">
-	<figure> <!-- @FIXME -->
-		<blockquote class="quote__text">Subconsciously, I think that I’m always searching for a look, an expression, a feature, or a sense of nostalgia capable of defining—or more specifically—revealing life.</blockquote>
-		<figcaption class="quote__author">- Richard Avedon</figcaption>
-	</figure>
-</div>
-<div id="contact">
+	</aside>
+</main>
+<footer id="contact">
 	<div class="container">
 		<div class="form-container">
 			<h2>Have a question? Need a quote?</h2>
@@ -152,6 +154,6 @@
 			<img src="./assets/images/camera.webp" alt="Nina Carducci's Camera" loading="lazy" width="2024" height="2020">
 		</div>
 	</div>
-</div>
+</footer>
 </body>
 </html>
