--- a/index.html
+++ b/index.html
@@ -85,11 +85,9 @@
 				<img data-gallery-tag="Business" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.thumbnail.webp" alt="Woman smiling in front of a laptop" loading="lazy"/>
 			</div>
 		</div>
-		<aside class="quote">
-			<figure>
-				<blockquote class="quote__text">A portrait is not a likeness. The moment an emotion or fact is transformed into a photograph, it is no longer a fact but an opinion. There is no such thing as inaccuracy in a photograph. All photographs are accurate. None of them is truth.</blockquote>
-				<figcaption class="quote__author">- Richard Avedon</figcaption>
-			</figure>
+		<aside class="quote" itemscope itemtype="https://schema.org/Quotation">
+			<blockquote class="quote__text" itemprop="text">A portrait is not a likeness. The moment an emotion or fact is transformed into a photograph, it is no longer a fact but an opinion. There is no such thing as inaccuracy in a photograph. All photographs are accurate. None of them is truth.</blockquote>
+			<p class="quote__author" itemprop="author" itemscope itemtype="https://schema.org/Person">- <span itemprop="name">Richard Avedon</span></p>
 		</aside>
 	</section>
 	<section id="services">
@@ -128,11 +126,9 @@
 			</div>
 		</div>
 	</section>
-	<aside class="quote">
-		<figure>
-			<blockquote class="quote__text">Subconsciously, I think that I’m always searching for a look, an expression, a feature, or a sense of nostalgia capable of defining—or more specifically—revealing life.</blockquote>
-			<figcaption class="quote__author">- Richard Avedon</figcaption>
-		</figure>
+	<aside class="quote" itemscope itemtype="https://schema.org/Quotation">
+		<blockquote class="quote__text" itemprop="text">Subconsciously, I think that I’m always searching for a look, an expression, a feature, or a sense of nostalgia capable of defining—or more specifically—revealing life.</blockquote>
+		<p class="quote__author" itemprop="author" itemscope itemtype="https://schema.org/Person">- <span itemprop="name">Richard Avedon</span></p>
 	</aside>
 </main>
 <footer id="contact">
