--- a/index.html
+++ b/index.html
@@ -151,5 +151,110 @@
 		</div>
 	</div>
 </footer>
+
+<script type="application/ld+json">
+[
+    {
+      "@context": "https://schema.org",
+      "@type": "Photograph",
+      "author": {
+		"@type": "Person",
+		"id": "https://nina-carducci.github.io/",
+		"name": "Nina Carducci"
+	  },
+      "url": "./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg",
+      "name": "People in a concert"
+    },
+    {
+      "@context": "https://schema.org",
+      "@type": "Photograph",
+      "author": {
+		"@type": "Person",
+		"id": "https://nina-carducci.github.io/",
+		"name": "Nina Carducci"
+	  },
+      "url": "./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg",
+      "name": "Man in sartorial style"
+    },
+    {
+      "@context": "https://schema.org",
+      "@type": "Photograph",
+      "author": {
+		"@type": "Person",
+		"id": "https://nina-carducci.github.io/",
+		"name": "Nina Carducci"
+	  },
+      "url": "./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg",
+      "name": "People talking in an openspace"
+    },
+    {
+      "@context": "https://schema.org",
+      "@type": "Photograph",
+      "author": {
+		"@type": "Person",
+		"id": "https://nina-carducci.github.io/",
+		"name": "Nina Carducci"
+	  },
+      "url": "./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg",
+      "name": "People grabbing hands"
+    },
+    {
+      "@context": "https://schema.org",
+      "@type": "Photograph",
+      "author": {
+		"@type": "Person",
+		"id": "https://nina-carducci.github.io/",
+		"name": "Nina Carducci"
+	  },
+      "url": "./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg",
+      "name": "Man closing his eyes"
+    },
+    {
+      "@context": "https://schema.org",
+      "@type": "Photograph",
+      "author": {
+		"@type": "Person",
+		"id": "https://nina-carducci.github.io/",
+		"name": "Nina Carducci"
+	  },
+      "url": "./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg",
+      "name": "Wedding celebration"
+    },
+    {
+      "@context": "https://schema.org",
+      "@type": "Photograph",
+      "author": {
+		"@type": "Person",
+		"id": "https://nina-carducci.github.io/",
+		"name": "Nina Carducci"
+	  },
+      "url": "./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg",
+      "name": "Young women"
+    },
+    {
+      "@context": "https://schema.org",
+      "@type": "Photograph",
+      "author": {
+		"@type": "Person",
+		"id": "https://nina-carducci.github.io/",
+		"name": "Nina Carducci"
+	  },
+      "url": "./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg",
+      "name": "Man singing with blue white red smoke"
+    },
+    {
+      "@context": "https://schema.org",
+      "@type": "Photograph",
+      "author": {
+		"@type": "Person",
+		"id": "https://nina-carducci.github.io/",
+		"name": "Nina Carducci"
+	  },
+      "url": "./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg",
+      "name": "Woman smiling in front of a laptop"
+    }
+]
+</script>
+
 </body>
 </html>
