Schema.org: Global prestation and rewrite

--- a/index.html
+++ b/index.html
@@ -153,107 +153,184 @@
 </footer>
 
 <script type="application/ld+json">
-[
-    {
-      "@context": "https://schema.org",
-      "@type": "Photograph",
-      "author": {
-		"@type": "Person",
-		"id": "https://nina-carducci.github.io/",
-		"name": "Nina Carducci"
-	  },
-      "url": "./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg",
-      "name": "People in a concert"
-    },
-    {
-      "@context": "https://schema.org",
-      "@type": "Photograph",
-      "author": {
-		"@type": "Person",
-		"id": "https://nina-carducci.github.io/",
-		"name": "Nina Carducci"
-	  },
-      "url": "./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg",
-      "name": "Man in sartorial style"
-    },
-    {
-      "@context": "https://schema.org",
-      "@type": "Photograph",
-      "author": {
-		"@type": "Person",
-		"id": "https://nina-carducci.github.io/",
-		"name": "Nina Carducci"
-	  },
-      "url": "./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg",
-      "name": "People talking in an openspace"
-    },
-    {
-      "@context": "https://schema.org",
-      "@type": "Photograph",
-      "author": {
-		"@type": "Person",
-		"id": "https://nina-carducci.github.io/",
-		"name": "Nina Carducci"
-	  },
-      "url": "./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg",
-      "name": "People grabbing hands"
-    },
-    {
-      "@context": "https://schema.org",
-      "@type": "Photograph",
-      "author": {
-		"@type": "Person",
-		"id": "https://nina-carducci.github.io/",
-		"name": "Nina Carducci"
-	  },
-      "url": "./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg",
-      "name": "Man closing his eyes"
-    },
-    {
-      "@context": "https://schema.org",
-      "@type": "Photograph",
-      "author": {
-		"@type": "Person",
-		"id": "https://nina-carducci.github.io/",
-		"name": "Nina Carducci"
-	  },
-      "url": "./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg",
-      "name": "Wedding celebration"
-    },
-    {
-      "@context": "https://schema.org",
-      "@type": "Photograph",
-      "author": {
-		"@type": "Person",
-		"id": "https://nina-carducci.github.io/",
-		"name": "Nina Carducci"
-	  },
-      "url": "./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg",
-      "name": "Young women"
-    },
-    {
-      "@context": "https://schema.org",
-      "@type": "Photograph",
-      "author": {
-		"@type": "Person",
-		"id": "https://nina-carducci.github.io/",
-		"name": "Nina Carducci"
-	  },
-      "url": "./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg",
-      "name": "Man singing with blue white red smoke"
-    },
-    {
-      "@context": "https://schema.org",
-      "@type": "Photograph",
-      "author": {
-		"@type": "Person",
-		"id": "https://nina-carducci.github.io/",
-		"name": "Nina Carducci"
-	  },
-      "url": "./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg",
-      "name": "Woman smiling in front of a laptop"
-    }
-]
+{
+	"@context": "http://schema.org",
+	"@graph":
+	[
+		{
+			"@type": "Photograph",
+			"author": {
+				"@type": "Person",
+				"id": "https://nina-carducci.github.io/",
+				"name": "Nina Carducci"
+			},
+			"url": "./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg",
+			"name": "People in a concert"
+		},
+		{
+			"@type": "Photograph",
+			"author": {
+				"@type": "Person",
+				"id": "https://nina-carducci.github.io/",
+				"name": "Nina Carducci"
+			},
+			"url": "./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg",
+			"name": "Man in sartorial style"
+		},
+		{
+			"@type": "Photograph",
+			"author": {
+				"@type": "Person",
+				"id": "https://nina-carducci.github.io/",
+				"name": "Nina Carducci"
+			},
+			"url": "./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg",
+			"name": "People talking in an openspace"
+		},
+		{
+			"@type": "Photograph",
+			"author": {
+				"@type": "Person",
+				"id": "https://nina-carducci.github.io/",
+				"name": "Nina Carducci"
+			},
+			"url": "./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg",
+			"name": "People grabbing hands"
+		},
+		{
+			"@type": "Photograph",
+			"author": {
+				"@type": "Person",
+				"id": "https://nina-carducci.github.io/",
+				"name": "Nina Carducci"
+			},
+			"url": "./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg",
+			"name": "Man closing his eyes"
+		},
+		{
+			"@type": "Photograph",
+			"author": {
+				"@type": "Person",
+				"id": "https://nina-carducci.github.io/",
+				"name": "Nina Carducci"
+			},
+			"url": "./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg",
+			"name": "Wedding celebration"
+		},
+		{
+			"@type": "Photograph",
+			"author": {
+				"@type": "Person",
+				"id": "https://nina-carducci.github.io/",
+				"name": "Nina Carducci"
+			},
+			"url": "./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg",
+			"name": "Young women"
+		},
+		{
+			"@type": "Photograph",
+			"author": {
+				"@type": "Person",
+				"id": "https://nina-carducci.github.io/",
+				"name": "Nina Carducci"
+			},
+			"url": "./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg",
+			"name": "Man singing with blue white red smoke"
+		},
+		{
+			"@type": "Photograph",
+			"author": {
+				"@type": "Person",
+				"id": "https://nina-carducci.github.io/",
+				"name": "Nina Carducci"
+			},
+			"url": "./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg",
+			"name": "Woman smiling in front of a laptop"
+		},
+		{
+			"@type": "ProfessionalService",
+			"name": "Nina Carducci",
+			"description": "Becoming a photographer was an easy choice for me. It felt like it was my destiny. Capturing a moment, an emotion, a situation, a place, or a glimmer of light and making them immortal, that’s what drives me.",
+			"url": "https://nina-carducci.github.io/",
+			"image": {
+				"@type": "ImageObject",
+				"contentUrl": "./assets/images/nina.png",
+				"alternateName": "A portrait of Nina Carducci"
+			},
+			"founder": {
+				"@type": "Person",
+				"id": "https://nina-carducci.github.io/",
+				"name": "Nina Carducci"
+			},
+			"owns": [
+				{
+					"@type": "Product",
+					"name": "Photo Shoots",
+					"description": "Capture your most precious moments and make them unforgettable. I can travel anywhere in Île-de-France to take your photos.",
+					"disambiguatingDescription": "Equipment and travel included",
+					"offers": [
+						{
+							"@type": "Offer",
+							"priceSpecification": [
+								{
+									"@type": "UnitPriceSpecification",
+									"price": "350",
+									"priceCurrency": "EUR",
+									"referenceQuantity": [{
+										"@type": "QuantitativeValue",
+										"unitCode": "DAY",
+										"value": 0.5
+									}]
+								}
+							]
+						}
+					]
+				},
+				{
+					"@type": "Product",
+					"name": "Retouching",
+					"description": "Are you looking to retouch your photos for a professional look? Optimally rendered images for your publications.",
+					"disambiguatingDescription": "Two revisions per photo",
+					"offers": [
+						{
+							"@type": "Offer",
+							"priceSpecification": [
+								{
+									"@type": "UnitPriceSpecification",
+									"price": "50",
+									"priceCurrency": "EUR",
+									"referenceQuantity": [{
+										"@type": "QuantitativeValue",
+										"unitText": "Photo",
+										"value": 1
+									}]
+								}
+							]
+						}
+					]
+				},
+				{
+					"@type": "Product",
+					"name": "Photo Albums",
+					"description": "Personalized photo albums of cherished moments to share with loved ones or clients.",
+					"disambiguatingDescription": "30 double-sided pages letter-sized album",
+					"offers": [
+						{
+							"@type": "Offer",
+							"priceSpecification": [
+								{
+									"@type": "UnitPriceSpecification",
+									"price": "400",
+									"priceCurrency": "EUR"
+								}
+							]
+						}
+					]
+				}
+			]
+		}
+	]
+}
 </script>
 
 </body>
