Schema.org: Make it compatible with Google's Rich Results

--- a/index.html
+++ b/index.html
@@ -251,6 +251,7 @@
 			"@type": "ProfessionalService",
 			"name": "Nina Carducci",
 			"description": "Becoming a photographer was an easy choice for me. It felt like it was my destiny. Capturing a moment, an emotion, a situation, a place, or a glimmer of light and making them immortal, that’s what drives me.",
+			"address": "Île-de-France",
 			"url": "https://nina-carducci.github.io/",
 			"image": {
 				"@type": "ImageObject",
@@ -267,7 +268,7 @@
 					"@type": "Product",
 					"name": "Photo Shoots",
 					"description": "Capture your most precious moments and make them unforgettable. I can travel anywhere in Île-de-France to take your photos.",
-					"disambiguatingDescription": "Equipment and travel included",
+					"disambiguatingDescription": "Equipment and travel included. Per half day.",
 					"offers": [
 						{
 							"@type": "Offer",
@@ -275,20 +276,16 @@
 								{
 									"@type": "UnitPriceSpecification",
 									"price": "350",
-									"priceCurrency": "EUR",
-									"referenceQuantity": [{
-										"@type": "QuantitativeValue",
-										"unitCode": "DAY",
-										"value": 0.5
-									}]
+									"priceCurrency": "EUR"
 								}
 							]
 						}
-					]
+					],
+					"image": "./assets/images/camera.png"
 				},
 				{
 					"@type": "Product",
-					"name": "Retouching",
+					"name": "Retouching a photo",
 					"description": "Are you looking to retouch your photos for a professional look? Optimally rendered images for your publications.",
 					"disambiguatingDescription": "Two revisions per photo",
 					"offers": [
@@ -298,16 +295,12 @@
 								{
 									"@type": "UnitPriceSpecification",
 									"price": "50",
-									"priceCurrency": "EUR",
-									"referenceQuantity": [{
-										"@type": "QuantitativeValue",
-										"unitText": "Photo",
-										"value": 1
-									}]
+									"priceCurrency": "EUR"
 								}
 							]
 						}
-					]
+					],
+					"image": "./assets/images/camera.png"
 				},
 				{
 					"@type": "Product",
@@ -325,7 +318,8 @@
 								}
 							]
 						}
-					]
+					],
+					"image": "./assets/images/camera.png"
 				}
 			]
 		}
