Review title and description [SEO]

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Nina Carducci Photographer</title>
-	<meta name="description" content="Becoming a photographer was an easy choice for me. It felt like it was my destiny. Capturing a moment, an emotion, a situation, a place, or a glimmer of light and making them immortal, that’s what drives me."/>
+	<title>Nina Carducci | Photographer of Île-de-France</title>
+	<meta name="description" content="Nina Carducci is a passionate photographer who specialize in capturing unforgettable photos in Île-de-France. Whether you are proposing, celebrating, business, or just having fun, she can help you to light up the best of your events."/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
 	<link rel="stylesheet" href="./assets/style.css">
