Add OpenGraph meta tags [Social networks]

--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
 	<meta charset="UTF-8">
 	<title>Nina Carducci | Photographer of Île-de-France</title>
 	<meta name="description" content="Nina Carducci is a passionate photographer who specialize in capturing unforgettable photos in Île-de-France. Whether you are proposing, celebrating, business, or just having fun, she can help you to light up the best of your events."/>
+	<meta name="og:title" content="Nina Carducci | Photographer of Île-de-France"/>
+	<meta name="og:description" content="Nina Carducci is a passionate photographer who specialize in capturing unforgettable photos in Île-de-France. Whether you are proposing, celebrating, business, or just having fun, she can help you to light up the best of your events."/>
+	<meta name="og:image" content="./assets/images/nina.png"/>
+	<meta name="og:image:alt" content="A portrait of Nina Carducci"/>
+	<meta name="og:url" content="https://nina-carducci.github.io/"/>
+	<meta name="og:locale" content="en_US"/>
+	<meta name="og:site_name" content="Nina Carducci"/>
+	<meta name="og:type" content="website"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
 	<link rel="stylesheet" href="./assets/style.css">
