--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 	<meta name="og:locale" content="en_US"/>
 	<meta name="og:site_name" content="Nina Carducci"/>
 	<meta name="og:type" content="website"/>
+	<meta name="twitter:card" content="summary"/>
+	<meta name="twitter:site" content="@ninacarducci.photo"/>
+	<meta name="twitter:title" content="Nina Carducci | Photographer of Île-de-France"/>
+	<meta name="twitter:description" content="Nina Carducci is a passionate photographer who specialize in capturing unforgettable photos in Île-de-France. Whether you are proposing, celebrating, business, or just having fun, she can help you to light up the best of your events."/>
+	<meta name="twitter:image" content="./assets/images/nina.png"/>
+	<meta name="twitter:image:alt" content="A portrait of Nina Carducci"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
 	<link rel="stylesheet" href="./assets/style.css">
