--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="Nina Carducci is a passionate photographer who specialize in capturing unforgettable photos in Île-de-France. Whether you are proposing, celebrating, business, or just having fun, she can help you to light up the best of your events."/>
 	<meta name="og:title" content="Nina Carducci | Photographer of Île-de-France"/>
 	<meta name="og:description" content="Nina Carducci is a passionate photographer who specialize in capturing unforgettable photos in Île-de-France. Whether you are proposing, celebrating, business, or just having fun, she can help you to light up the best of your events."/>
-	<meta name="og:image" content="./assets/images/nina.png"/>
+	<meta name="og:image" content="https://nina-carducci.github.io/assets/images/nina.png"/>
 	<meta name="og:image:alt" content="A portrait of Nina Carducci"/>
 	<meta name="og:url" content="https://nina-carducci.github.io/"/>
 	<meta name="og:locale" content="en_US"/>
@@ -16,7 +16,7 @@
 	<meta name="twitter:site" content="@ninacarducci.photo"/>
 	<meta name="twitter:title" content="Nina Carducci | Photographer of Île-de-France"/>
 	<meta name="twitter:description" content="Nina Carducci is a passionate photographer who specialize in capturing unforgettable photos in Île-de-France. Whether you are proposing, celebrating, business, or just having fun, she can help you to light up the best of your events."/>
-	<meta name="twitter:image" content="./assets/images/nina.png"/>
+	<meta name="twitter:image" content="https://nina-carducci.github.io/assets/images/nina.png"/>
 	<meta name="twitter:image:alt" content="A portrait of Nina Carducci"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
