--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: http://ogp.me/ns#">
 <head>
 	<meta charset="UTF-8">
 	<title>Nina Carducci | Photographer of Île-de-France</title>
 	<meta name="description" content="Nina Carducci is a passionate photographer who specialize in capturing unforgettable photos in Île-de-France. Whether you are proposing, celebrating, business, or just having fun, she can help you to light up the best of your events."/>
-	<meta name="og:title" content="Nina Carducci | Photographer of Île-de-France"/>
-	<meta name="og:description" content="Nina Carducci is a passionate photographer who specialize in capturing unforgettable photos in Île-de-France. Whether you are proposing, celebrating, business, or just having fun, she can help you to light up the best of your events."/>
-	<meta name="og:image" content="https://nina-carducci.github.io/assets/images/nina.png"/>
-	<meta name="og:image:alt" content="A portrait of Nina Carducci"/>
-	<meta name="og:url" content="https://nina-carducci.github.io/"/>
-	<meta name="og:locale" content="en_US"/>
-	<meta name="og:site_name" content="Nina Carducci"/>
-	<meta name="og:type" content="website"/>
+	<meta property="og:title" content="Nina Carducci | Photographer of Île-de-France"/>
+	<meta property="og:description" content="Nina Carducci is a passionate photographer who specialize in capturing unforgettable photos in Île-de-France. Whether you are proposing, celebrating, business, or just having fun, she can help you to light up the best of your events."/>
+	<meta property="og:image" content="https://nina-carducci.github.io/assets/images/nina.png"/>
+	<meta property="og:image:alt" content="A portrait of Nina Carducci"/>
+	<meta property="og:url" content="https://nina-carducci.github.io/"/>
+	<meta property="og:locale" content="en_US"/>
+	<meta property="og:site_name" content="Nina Carducci"/>
+	<meta property="og:type" content="website"/>
 	<meta name="twitter:card" content="summary"/>
 	<meta name="twitter:site" content="@ninacarducci.photo"/>
 	<meta name="twitter:title" content="Nina Carducci | Photographer of Île-de-France"/>
