Set quotations in aside [Accessibility]

--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
 				<img data-gallery-tag="Business" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.thumbnail.webp" alt="Woman smiling in front of a laptop" loading="lazy"/>
 			</div>
 		</div>
-		<div class="quote">
-			<figure> <!-- @FIXME -->
+		<aside class="quote">
+			<figure>
 				<blockquote class="quote__text">A portrait is not a likeness. The moment an emotion or fact is transformed into a photograph, it is no longer a fact but an opinion. There is no such thing as inaccuracy in a photograph. All photographs are accurate. None of them is truth.</blockquote>
 				<figcaption class="quote__author">- Richard Avedon</figcaption>
 			</figure>
-		</div>
+		</aside>
 	</section>
 	<section id="services">
 		<h2 class="title">My services</h2>
@@ -129,7 +129,7 @@
 		</div>
 	</section>
 	<aside class="quote">
-		<figure> <!-- @FIXME -->
+		<figure>
 			<blockquote class="quote__text">Subconsciously, I think that I’m always searching for a look, an expression, a feature, or a sense of nostalgia capable of defining—or more specifically—revealing life.</blockquote>
 			<figcaption class="quote__author">- Richard Avedon</figcaption>
 		</figure>
