Revert figure tag on quotes [Accessibility]

--- a/index.html
+++ b/index.html
@@ -100,8 +100,10 @@
 			</div>
 		</div>
 		<aside class="quote" itemscope itemtype="https://schema.org/Quotation">
-			<blockquote class="quote__text" itemprop="text">A portrait is not a likeness. The moment an emotion or fact is transformed into a photograph, it is no longer a fact but an opinion. There is no such thing as inaccuracy in a photograph. All photographs are accurate. None of them is truth.</blockquote>
-			<p class="quote__author" itemprop="author" itemscope itemtype="https://schema.org/Person">- <span itemprop="name">Richard Avedon</span></p>
+			<figure>
+				<blockquote class="quote__text" itemprop="text">A portrait is not a likeness. The moment an emotion or fact is transformed into a photograph, it is no longer a fact but an opinion. There is no such thing as inaccuracy in a photograph. All photographs are accurate. None of them is truth.</blockquote>
+				<figcaption class="quote__author" itemprop="author" itemscope itemtype="https://schema.org/Person">- <span itemprop="name">Richard Avedon</span></figcaption>
+			</figure>
 		</aside>
 	</section>
 	<section id="services">
@@ -141,8 +143,10 @@
 		</div>
 	</section>
 	<aside class="quote" itemscope itemtype="https://schema.org/Quotation">
-		<blockquote class="quote__text" itemprop="text">Subconsciously, I think that I’m always searching for a look, an expression, a feature, or a sense of nostalgia capable of defining—or more specifically—revealing life.</blockquote>
-		<p class="quote__author" itemprop="author" itemscope itemtype="https://schema.org/Person">- <span itemprop="name">Richard Avedon</span></p>
+		<figure>
+			<blockquote class="quote__text" itemprop="text">Subconsciously, I think that I’m always searching for a look, an expression, a feature, or a sense of nostalgia capable of defining—or more specifically—revealing life.</blockquote>
+			<figcaption class="quote__author" itemprop="author" itemscope itemtype="https://schema.org/Person">- <span itemprop="name">Richard Avedon</span></figcaption>
+		</figure>
 	</aside>
 </main>
 <footer id="contact">
