Schema.org: Update address, add phone number and opening hours

--- a/index.html
+++ b/index.html
@@ -269,7 +269,41 @@
 			"@type": "ProfessionalService",
 			"name": "Nina Carducci",
 			"description": "Becoming a photographer was an easy choice for me. It felt like it was my destiny. Capturing a moment, an emotion, a situation, a place, or a glimmer of light and making them immortal, that’s what drives me.",
-			"address": "Île-de-France",
+			"address": "68 avenue Alsace-Lorraine, 33200 Bordeaux",
+			"areaServed": "Île-de-France",
+			"telephone": "05 56 67 78 89",
+			"openingHoursSpecification": [
+				{
+					"@type": "OpeningHoursSpecification",
+					"closes": "19:00:00",
+					"dayOfWeek": "https://schema.org/Monday",
+					"opens": "10:00:00"
+				},
+				{
+					"@type": "OpeningHoursSpecification",
+					"closes": "19:00:00",
+					"dayOfWeek": "https://schema.org/Tuesday",
+					"opens": "10:00:00"
+				},
+				{
+					"@type": "OpeningHoursSpecification",
+					"closes": "19:00:00",
+					"dayOfWeek":  "https://schema.org/Wednesday",
+					"opens": "10:00:00"
+				},
+				{
+					"@type": "OpeningHoursSpecification",
+					"closes": "19:00:00",
+					"dayOfWeek": "https://schema.org/Thursday",
+					"opens": "10:00:00"
+				},
+				{
+					"@type": "OpeningHoursSpecification",
+					"closes": "19:00:00",
+					"dayOfWeek":  "https://schema.org/Friday",
+					"opens": "10:00:00"
+				}
+			],
 			"url": "https://nina-carducci.github.io/",
 			"image": {
 				"@type": "ImageObject",
