--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 		<div class="form-container">
 			<h2>Have a question? Need a quote?</h2>
 			<p> Don’t hesitate to contact me! I’ll get back to you within 24 hours.</p>
-			<form action="" method="post">
+			<form action="." method="post">
 				<label for="name">Name</label>
 				<input type="text" name="name" id="name">
 				<label for="email">Email</label>
