--- a/index.html
+++ b/index.html
@@ -3,28 +3,28 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Nina Carducci | Photographer of Île-de-France</title>
-	<meta name="description" content="Nina Carducci is a passionate photographer who specialize in capturing unforgettable photos in Île-de-France. Whether you are proposing, celebrating, business, or just having fun, she can help you to light up the best of your events."/>
-	<meta property="og:title" content="Nina Carducci | Photographer of Île-de-France"/>
-	<meta property="og:description" content="Nina Carducci is a passionate photographer who specialize in capturing unforgettable photos in Île-de-France. Whether you are proposing, celebrating, business, or just having fun, she can help you to light up the best of your events."/>
-	<meta property="og:image" content="https://nina-carducci.github.io/assets/images/nina.png"/>
-	<meta property="og:image:alt" content="A portrait of Nina Carducci"/>
-	<meta property="og:url" content="https://nina-carducci.github.io/"/>
-	<meta property="og:locale" content="en_US"/>
-	<meta property="og:site_name" content="Nina Carducci"/>
-	<meta property="og:type" content="website"/>
-	<meta name="twitter:card" content="summary"/>
-	<meta name="twitter:site" content="@ninacarducci.photo"/>
-	<meta name="twitter:title" content="Nina Carducci | Photographer of Île-de-France"/>
-	<meta name="twitter:description" content="Nina Carducci is a passionate photographer who specialize in capturing unforgettable photos in Île-de-France. Whether you are proposing, celebrating, business, or just having fun, she can help you to light up the best of your events."/>
-	<meta name="twitter:image" content="https://nina-carducci.github.io/assets/images/nina.png"/>
-	<meta name="twitter:image:alt" content="A portrait of Nina Carducci"/>
+	<meta name="description" content="Nina Carducci is a passionate photographer who specialize in capturing unforgettable photos in Île-de-France. Whether you are proposing, celebrating, business, or just having fun, she can help you to light up the best of your events.">
+	<meta property="og:title" content="Nina Carducci | Photographer of Île-de-France">
+	<meta property="og:description" content="Nina Carducci is a passionate photographer who specialize in capturing unforgettable photos in Île-de-France. Whether you are proposing, celebrating, business, or just having fun, she can help you to light up the best of your events.">
+	<meta property="og:image" content="https://nina-carducci.github.io/assets/images/nina.png">
+	<meta property="og:image:alt" content="A portrait of Nina Carducci">
+	<meta property="og:url" content="https://nina-carducci.github.io/">
+	<meta property="og:locale" content="en_US">
+	<meta property="og:site_name" content="Nina Carducci">
+	<meta property="og:type" content="website">
+	<meta name="twitter:card" content="summary">
+	<meta name="twitter:site" content="@ninacarducci.photo">
+	<meta name="twitter:title" content="Nina Carducci | Photographer of Île-de-France">
+	<meta name="twitter:description" content="Nina Carducci is a passionate photographer who specialize in capturing unforgettable photos in Île-de-France. Whether you are proposing, celebrating, business, or just having fun, she can help you to light up the best of your events.">
+	<meta name="twitter:image" content="https://nina-carducci.github.io/assets/images/nina.png">
+	<meta name="twitter:image:alt" content="A portrait of Nina Carducci">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
-	<link rel="canonical" href="https://nina-carducci.github.io/"/>
+	<link rel="canonical" href="https://nina-carducci.github.io/">
 	<script defer src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<script defer src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
 	<script defer src="./assets/maugallery.js"></script>
@@ -88,15 +88,15 @@
 		<h2 class="title">Portfolio</h2>
 		<div class="container py-3">
 			<div class="gallery" style="display: none">
-				<img data-gallery-tag="Concerts" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.thumbnail.webp" alt="People in a concert" loading="lazy"/>
-				<img data-gallery-tag="Business" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.thumbnail.webp" alt="Man in sartorial style" loading="lazy"/>
-				<img data-gallery-tag="Business" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.thumbnail.webp" alt="People talking in an openspace" loading="lazy"/>
-				<img data-gallery-tag="Weddings" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.thumbnail.webp" alt="People grabbing hands" loading="lazy"/>
-				<img data-gallery-tag="Portraits" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.thumbnail.webp" alt="Man closing his eyes" loading="lazy"/>
-				<img data-gallery-tag="Weddings" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.thumbnail.webp" alt="Wedding celebration" loading="lazy"/>
-				<img data-gallery-tag="Portraits" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.thumbnail.webp" alt="Young women" loading="lazy"/>
-				<img data-gallery-tag="Concerts" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.thumbnail.webp" alt="Man singing with blue white red smoke" loading="lazy"/>
-				<img data-gallery-tag="Business" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.thumbnail.webp" alt="Woman smiling in front of a laptop" loading="lazy"/>
+				<img data-gallery-tag="Concerts" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.thumbnail.webp" alt="People in a concert" loading="lazy">
+				<img data-gallery-tag="Business" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.thumbnail.webp" alt="Man in sartorial style" loading="lazy">
+				<img data-gallery-tag="Business" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.thumbnail.webp" alt="People talking in an openspace" loading="lazy">
+				<img data-gallery-tag="Weddings" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.thumbnail.webp" alt="People grabbing hands" loading="lazy">
+				<img data-gallery-tag="Portraits" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.thumbnail.webp" alt="Man closing his eyes" loading="lazy">
+				<img data-gallery-tag="Weddings" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.thumbnail.webp" alt="Wedding celebration" loading="lazy">
+				<img data-gallery-tag="Portraits" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.thumbnail.webp" alt="Young women" loading="lazy">
+				<img data-gallery-tag="Concerts" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.thumbnail.webp" alt="Man singing with blue white red smoke" loading="lazy">
+				<img data-gallery-tag="Business" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.thumbnail.webp" alt="Woman smiling in front of a laptop" loading="lazy">
 			</div>
 		</div>
 		<aside class="quote" itemscope itemtype="https://schema.org/Quotation">
@@ -161,7 +161,7 @@
 				<input type="email" name="email" id="email">
 				<label for="message">Message</label>
 				<textarea name="message" id="message" cols="30" rows="10"></textarea>
-				<input type="submit" value="Send"/>
+				<input type="submit" value="Send">
 			</form>
 		</div>
 		<div class="picture right">
